# casm_io

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
casm_io/: __init__.py  _progress.py  _results.py  _time.py  constants.py
casm_io/candidates/: __init__.py  livematching.py  matching.py  plotting.py  reader.py
casm_io/correlator/: __init__.py  baselines.py  formats.py  header.py  mapping.py  reader.py  writer.py
casm_io/correlator/configs/: layout_32ant.json  layout_64ant.json  post_jan27_2026.json  pre_jan27_2026.json
casm_io/filterbank/: __init__.py  header.py  plotting.py  reader.py  writer.py
casm_io/voltage/: __init__.py  header.py  reader.py  unpack.py
casm_io/voltage/configs/: dada_format.json
docs/: candidates.md  correlator.md  filterbank.md  voltage.md
examples/: inspect_filterbank.py
tests/: conftest.py
tests/test_correlator/: test_baselines.py  test_formats.py  test_header.py  test_mapping.py  test_phase1_additions.py  test_reader_writer.py
tests/test_filterbank/: test_header.py  test_plotting.py  test_reader_writer.py
tests/test_voltage/: test_header.py  test_reader.py  test_unpack.py
